apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=bitbucket ok.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=bitbucket ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
[]----------
CLI result: LintSucceeded
----------
