apps/oxlint/src/snapshots/fixtures__cli__output_formatter_diagnostic_--format=default ok.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=default ok.js
working directory: fixtures/cli/output_formatter_diagnostic
----------
Found 0 warnings and 0 errors.
Finished in <variable>ms on 1 file with 2 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
